--- a/随手记/随手记/Classes/PresentenceLayer/ZhiBo/ZCLive/ZCLinLiveAnchorView.xib
+++ b/随手记/随手记/Classes/PresentenceLayer/ZhiBo/ZCLive/ZCLinLiveAnchorView.xib
@@ -1,10 +1,104 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <view contentMode="scaleToFill" id="OZ5-Bj-Iea" customClass="ZCLinLiveAnchorView">
+            <rect key="frame" x="0.0" y="0.0" width="218" height="111"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ccj-d6-1yK" userLabel="主播信息">
+                    <rect key="frame" x="0.0" y="0.0" width="218" height="72"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder_head" translatesAutoresizingMaskIntoConstraints="NO" id="p7r-UX-Q2k">
+                            <rect key="frame" x="10" y="10" width="50" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="RHK-3r-Sj1"/>
+                                <constraint firstAttribute="width" constant="50" id="ueO-Nu-qa4"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="主播名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKW-tC-ix5">
+                            <rect key="frame" x="65" y="15" width="48" height="15"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10002人" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1r7-Qk-hTN">
+                            <rect key="frame" x="65" y="40" width="52" height="16"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="apL-H5-zLN">
+                            <rect key="frame" x="168" y="15" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="9M2-bf-rBc"/>
+                                <constraint firstAttribute="width" constant="40" id="d7T-Lp-2hw"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <state key="normal" title="关闭">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="closeButtonClik" destination="OZ5-Bj-Iea" eventType="touchUpInside" id="tJC-Gq-s83"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="p7r-UX-Q2k" firstAttribute="top" secondItem="Ccj-d6-1yK" secondAttribute="top" constant="10" id="9hv-iB-FKY"/>
+                        <constraint firstAttribute="trailing" secondItem="apL-H5-zLN" secondAttribute="trailing" constant="10" id="QM3-5D-70c"/>
+                        <constraint firstItem="p7r-UX-Q2k" firstAttribute="leading" secondItem="Ccj-d6-1yK" secondAttribute="leading" constant="10" id="VgR-hx-tIt"/>
+                        <constraint firstItem="1r7-Qk-hTN" firstAttribute="top" secondItem="sKW-tC-ix5" secondAttribute="bottom" constant="10" id="WIn-hh-faB"/>
+                        <constraint firstItem="sKW-tC-ix5" firstAttribute="leading" secondItem="p7r-UX-Q2k" secondAttribute="trailing" constant="5" id="YeF-6P-awk"/>
+                        <constraint firstItem="apL-H5-zLN" firstAttribute="top" secondItem="Ccj-d6-1yK" secondAttribute="top" constant="15" id="bB4-jJ-Gcb"/>
+                        <constraint firstItem="sKW-tC-ix5" firstAttribute="top" secondItem="Ccj-d6-1yK" secondAttribute="top" constant="15" id="bXN-AA-4af"/>
+                        <constraint firstItem="1r7-Qk-hTN" firstAttribute="leading" secondItem="p7r-UX-Q2k" secondAttribute="trailing" constant="5" id="tkK-ko-U9C"/>
+                    </constraints>
+                </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eEO-OF-br5" userLabel="Gif图">
+                    <rect key="frame" x="0.0" y="82" width="218" height="29"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="猫粮:1993045  娃娃124593">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                </button>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="eEO-OF-br5" firstAttribute="top" secondItem="Ccj-d6-1yK" secondAttribute="bottom" constant="10" id="DsX-FI-pPj"/>
+                <constraint firstItem="eEO-OF-br5" firstAttribute="top" secondItem="Ccj-d6-1yK" secondAttribute="bottom" constant="10" id="HpW-Xf-woC"/>
+                <constraint firstAttribute="trailing" secondItem="Ccj-d6-1yK" secondAttribute="trailing" id="cBz-Tn-kcq"/>
+                <constraint firstAttribute="bottom" secondItem="eEO-OF-br5" secondAttribute="bottom" id="j6Q-qL-7j1"/>
+                <constraint firstItem="eEO-OF-br5" firstAttribute="leading" secondItem="OZ5-Bj-Iea" secondAttribute="leading" id="l1g-TU-zYK"/>
+                <constraint firstItem="Ccj-d6-1yK" firstAttribute="top" secondItem="OZ5-Bj-Iea" secondAttribute="top" id="qtU-A2-Jwn"/>
+                <constraint firstItem="Ccj-d6-1yK" firstAttribute="leading" secondItem="OZ5-Bj-Iea" secondAttribute="leading" id="trJ-V3-z05"/>
+                <constraint firstAttribute="trailing" secondItem="eEO-OF-br5" secondAttribute="trailing" id="uaB-d3-Yak"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="DsX-FI-pPj"/>
+                </mask>
+            </variation>
+            <connections>
+                <outlet property="closeButton" destination="apL-H5-zLN" id="21A-8B-KqS"/>
+                <outlet property="gifButtom" destination="eEO-OF-br5" id="Ame-Nd-cir"/>
+                <outlet property="headImageView" destination="p7r-UX-Q2k" id="POq-al-P50"/>
+                <outlet property="informationView" destination="Ccj-d6-1yK" id="Xya-d4-KB0"/>
+                <outlet property="nameLabel" destination="sKW-tC-ix5" id="W22-yA-LUi"/>
+                <outlet property="numberLabel" destination="1r7-Qk-hTN" id="3Ke-m2-Hxb"/>
+            </connections>
+            <point key="canvasLocation" x="230" y="145.5"/>
+        </view>
     </objects>
+    <resources>
+        <image name="placeholder_head" width="100" height="100"/>
+    </resources>
 </document>
